@@ -1,3 +1,9 @@
+03 April 2008
+
+* New flags, no-cram-md5 and no-login, on IMAP accounts to force fdm not to
+  use cram-md5 or login authentication even if the server supports it. From
+  Anthony Wood.
+
 01 April 2008
 
 * Support SIGUSR1 as an alias for SIGINFO, for platforms without SIGINFO.
@@ -811,4 +817,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.189 2008-04-01 21:02:21 nicm Exp $
+$Id: CHANGES,v 1.190 2008-04-03 18:46:24 nicm Exp $
